fix crent weather location name bug on mobile version

--- a/css/resp.css
+++ b/css/resp.css
@@ -50,7 +50,7 @@
 
 @media (width < 1000px) { 
   .footer {
-    padding: 50px;
+    padding: 40px;
   }
 
   #forcedisplayblock {
